--- a/home/templates/home/social_base.html
+++ b/home/templates/home/social_base.html
@@ -406,11 +406,12 @@
                             {% if request.user.is_authenticated %}
                                 <img src="{{ request.user.profile_image.url }}" data-demo-src="{{ request.user.profile_image.url }}" alt="Your Profile Photo">
                             {% else %}
-                            <img src="https://images.unsplash.com/photo-1527980965255-d3b416303d12?ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8cGVvcGxlfGVufDB8MnwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" data-demo-src="https://images.unsplash.com/photo-1527980965255-d3b416303d12?ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8cGVvcGxlfGVufDB8MnwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="Your Profile Photo">
+                            <img src="{% static 'images/icon/user.png' %}" data-demo-src="{% static 'images/icon/user.png' %}">
                             {% endif %}
                             <span class="indicator"></span>
                         </div>
 
+                        {% if user.is_autenticated %}
                         <div class="nav-drop is-account-dropdown">
                             <div class="inner">
 <!--                                <div class="nav-drop-header">-->
@@ -427,12 +428,13 @@
 <!--                                        </span>-->
 <!--                                    </label>-->
 <!--                                </div>-->
+
                                 <div class="nav-drop-body account-items">
                                     <a id="profile-link" href="{% url 'user:profile' %}" class="account-item">
                                         <div class="media">
                                             <div class="media-left">
                                                 <div class="image">
-                                                    <img src="{{request.user.profile_image.url}}" data-demo-src="{{request.user.profile_image.url}}" alt="">
+                                                    <img src="{{request.user.get_profile_img}}" data-demo-src="{{request.user.get_profile_img}}" alt="">
                                                 </div>
                                             </div>
                                             <div class="media-content">
@@ -444,6 +446,7 @@
                                             </div>
                                         </div>
                                     </a>
+
 <!--                                    <hr class="account-divider">-->
                                     <!-- <a href="" class="account-item">
                                         <div class="media">
@@ -530,6 +533,7 @@
                                 </div>
                             </div>
                         </div>
+                         {% endif %}
                     </div>
                 </div>
 
