--- a/post/templates/post/feeds.html
+++ b/post/templates/post/feeds.html
@@ -358,59 +358,59 @@
                         </div>
                         <div class="card-body">
                             <div class="temperature">
-                                <span>71</span>
+                                <span>Ads Here </span>
                             </div>
-                            <div class="weather-icon">
-                                <div>
-                                    <i data-feather="sun"></i>
-                                    <h4>Sunny</h4>
-                                    <div class="details">
-                                        <span>Real Feel: 78° </span>
-                                        <span>Rain Chance: 5%</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="previsions">
-                                <div class="day">
-                                    <span>Mon</span>
-                                    <i data-feather="sun"></i>
-                                    <span>69°</span>
-                                </div>
-                                <div class="day">
-                                    <span>Tue</span>
-                                    <i data-feather="cloud-lightning"></i>
-                                    <span>74°</span>
-                                </div>
-                                <div class="day">
-                                    <span>Wed</span>
-                                    <i data-feather="cloud-lightning"></i>
-                                    <span>73°</span>
-                                </div>
-                                <div class="day">
-                                    <span>Thu</span>
-                                    <i data-feather="sun"></i>
-                                    <span>68°</span>
-                                </div>
-                                <div class="day">
-                                    <span>Fri</span>
-                                    <i data-feather="cloud-drizzle"></i>
-                                    <span>55°</span>
-                                </div>
-                                <div class="day">
-                                    <span>Sat</span>
-                                    <i data-feather="cloud-rain"></i>
-                                    <span>58°</span>
-                                </div>
-                                <div class="day">
-                                    <span>Sun</span>
-                                    <i data-feather="sun"></i>
-                                    <span>64°</span>
-                                </div>
-                            </div>
-                            <div class="current-date-location has-text-centered">
-                                <span class="date">Sunday, 18th 2018</span>
-                                <span class="location"> <i data-feather="map-pin"></i> Los Angeles, CA</span>
-                            </div>
+<!--                            <div class="weather-icon">-->
+<!--                                <div>-->
+<!--                                    <i data-feather="sun"></i>-->
+<!--                                    <h4>Sunny</h4>-->
+<!--                                    <div class="details">-->
+<!--                                        <span>Real Feel: 78° </span>-->
+<!--                                        <span>Rain Chance: 5%</span>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            <div class="previsions">-->
+<!--                                <div class="day">-->
+<!--                                    <span>Mon</span>-->
+<!--                                    <i data-feather="sun"></i>-->
+<!--                                    <span>69°</span>-->
+<!--                                </div>-->
+<!--                                <div class="day">-->
+<!--                                    <span>Tue</span>-->
+<!--                                    <i data-feather="cloud-lightning"></i>-->
+<!--                                    <span>74°</span>-->
+<!--                                </div>-->
+<!--                                <div class="day">-->
+<!--                                    <span>Wed</span>-->
+<!--                                    <i data-feather="cloud-lightning"></i>-->
+<!--                                    <span>73°</span>-->
+<!--                                </div>-->
+<!--                                <div class="day">-->
+<!--                                    <span>Thu</span>-->
+<!--                                    <i data-feather="sun"></i>-->
+<!--                                    <span>68°</span>-->
+<!--                                </div>-->
+<!--                                <div class="day">-->
+<!--                                    <span>Fri</span>-->
+<!--                                    <i data-feather="cloud-drizzle"></i>-->
+<!--                                    <span>55°</span>-->
+<!--                                </div>-->
+<!--                                <div class="day">-->
+<!--                                    <span>Sat</span>-->
+<!--                                    <i data-feather="cloud-rain"></i>-->
+<!--                                    <span>58°</span>-->
+<!--                                </div>-->
+<!--                                <div class="day">-->
+<!--                                    <span>Sun</span>-->
+<!--                                    <i data-feather="sun"></i>-->
+<!--                                    <span>64°</span>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            <div class="current-date-location has-text-centered">-->
+<!--                                <span class="date">Sunday, 18th 2018</span>-->
+<!--                                <span class="location"> <i data-feather="map-pin"></i> Los Angeles, CA</span>-->
+<!--                            </div>-->
                         </div>
                     </div>
 
