--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -37,7 +37,7 @@
                             <div class="badge">
                                 <i data-feather="check"></i>
                             </div>
-                            <img src="https://images.unsplash.com/photo-1527980965255-d3b416303d12?ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8cGVvcGxlfGVufDB8MnwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" data-demo-src="https://images.unsplash.com/photo-1527980965255-d3b416303d12?ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8cGVvcGxlfGVufDB8MnwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="">
+                            <img src="{% static 'images/icon/user.png' %}" data-demo-src="{% static 'images/icon/user.png' %}" alt="">
                         </div>
                         <!--Form-->
                         <div class="login-form">
@@ -70,7 +70,7 @@
                         </div>
                         <div class="section forgot-password">
                             <div class="has-text-centered">
-                                <a href="#">Forgot password?</a>
+<!--                                <a href="#">Forgot password?</a>-->
                             </div>
                         </div>
                     </div>
